--- a/.env.example
+++ b/.env.example
@@ -1,92 +1,41 @@
-# 🐺 CONFIGURACIÓN LA HUERTA DEL HUSKY
+# ⚖️ CONFIGURACIÓN BOT DESPACHO JURÍDICO
 
 # ═══════════════════════════════════════════════════════════════
-# 🤖 CONFIGURACIÓN ESENCIAL DEL BOT
+# 🤖 CONFIGURACIÓN ESENCIAL (OBLIGATORIO)
 # ═══════════════════════════════════════════════════════════════
 
-# Groq API para personalidad IA del bot (OBLIGATORIO)
-GROQ_API_KEY=your_groq_api_key_here
+# API de Groq para IA del bot
+# Obtener GRATIS en: https://console.groq.com/
+GROQ_API_KEY=tu_api_key_de_groq_aqui
 
-# Número del dueño (para funciones especiales)
+# Número de teléfono del dueño (para comandos especiales)
 OWNER_PHONE=5214777244259
 
-# ═══════════════════════════════════════════════════════════════
-# 🌱 APIS DE PLANTAS MÚLTIPLES (Sistema Unificado)
-# ═══════════════════════════════════════════════════════════════
-
-# Plant.id API - Comercial con créditos limitados
-# Regístrate en: https://web.plant.id/
-PLANT_ID_API_KEY=your_plant_id_api_key_here
-
-# PlantNet Official API - GRATIS hasta 500 requests/día
-# Regístrate GRATIS en: https://my.plantnet.org/
-PLANTNET_API_KEY=your_free_plantnet_api_key_here
-
-# Google Vision API - $300 USD GRATIS al registrarte
-# Configura service account JSON path
-GOOGLE_APPLICATION_CREDENTIALS=path/to/google-service-account.json
-
-# iNaturalist API - COMPLETAMENTE GRATIS (OAuth)
-# Crear aplicación en: https://www.inaturalist.org/oauth/applications/new
-INATURALIST_CLIENT_ID=your_inaturalist_client_id
-INATURALIST_CLIENT_SECRET=your_inaturalist_client_secret
+# Puerto del servidor (opcional, por defecto 3000)
+PORT=3000
 
 # ═══════════════════════════════════════════════════════════════
-# 📊 SISTEMA UNIFICADO DE IDENTIFICACIÓN
+# 📋 INFORMACIÓN DEL DESPACHO
 # ═══════════════════════════════════════════════════════════════
 
-# El bot ahora usa un sistema que combina múltiples APIs:
-# 1. Google Vision API ($300 gratis - Máxima precisión)
-# 2. PlantNet Official API (GRATIS - 500 requests/día)  
-# 3. iNaturalist API (GRATIS - Sin límites)
-# 4. PetalSearch (GRATIS - Análisis de patrones)
-# 5. PlantNet Simulation (Siempre disponible como fallback)
+DESPACHO_NOMBRE=Despacho Jurídico Profesional
+DESPACHO_TELEFONO=+52 477 724 4259
+DESPACHO_DIRECCION=Av. Principal #123, Ciudad
 
 # ═══════════════════════════════════════════════════════════════
-# ⚙️ CONFIGURACIÓN DEL SISTEMA (OPCIONAL)
-# ═══════════════════════════════════════════════════════════════
-
-# Puerto del servidor (por defecto 3000)
-# PORT=3000
-
-# Límite de stock bajo (por defecto 5)
-# LOW_STOCK_THRESHOLD=5
-
-# ═══════════════════════════════════════════════════════════════
-# 📝 INSTRUCCIONES DE CONFIGURACIÓN
+# 📝 INSTRUCCIONES
 # ═══════════════════════════════════════════════════════════════
 
 # 1. Copia este archivo como .env:
 #    cp .env.example .env
 
-# 2. OBLIGATORIO - Groq API:
+# 2. OBLIGATORIO - Obtener Groq API:
 #    - Ir a: https://console.groq.com/
-#    - Crear cuenta gratuita
+#    - Crear cuenta GRATIS
 #    - Obtener API key
 #    - Pegar en GROQ_API_KEY
 
-# 3. OPCIONAL - PlantNet API (GRATIS):
-#    - Ir a: https://my.plantnet.org/
-#    - Crear cuenta gratuita
-#    - Obtener API key gratis
-#    - Pegar en PLANTNET_API_KEY
-#    - Límite: 500 requests/día
+# 3. Personalizar información del despacho
 
-# 4. OPCIONAL - Plant.id API (Comercial):
-#    - Solo si quieres máxima precisión
-#    - Ir a: https://plant.id/
-#    - Obtener créditos (de pago después de prueba)
-
-# ═══════════════════════════════════════════════════════════════
-# 🚀 VENTAJAS DEL SISTEMA UNIFICADO
-# ═══════════════════════════════════════════════════════════════
-
-# ✅ iNaturalist: 500,000+ especies, completamente GRATIS
-# ✅ PlantNet: 30,000+ especies, 500 requests/día GRATIS  
-# ✅ Consenso: Combina resultados para mayor precisión
-# ✅ Fallback: Siempre tiene una respuesta disponible
-# ✅ Smart: Ponderación automática de resultados
-# 2. Solo necesitas GROQ_API_KEY para que funcione todo
-# 3. Las demás APIs son opcionales pero mejoran la experiencia
-# 4. Para Plant.id: 500 identificaciones gratis al mes
-# 5. ¡El bot funciona perfectamente sin APIs extra!
+# 4. Iniciar bot:
+#    npm run bot
