--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "huerta-husky-system",
-  "version": "2.0.0",
-  "description": "Sistema completo WhatsApp Bot + API para La Huerta del Husky",
+  "name": "bot-despacho-juridico",
+  "version": "1.0.0",
+  "description": "Sistema completo WhatsApp Bot para Despacho Jurídico con IA",
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
@@ -14,13 +14,14 @@
   "keywords": [
     "whatsapp",
     "bot",
-    "plants",
-    "inventory",
-    "business",
-    "api",
-    "express"
+    "legal",
+    "abogado",
+    "juridico",
+    "despacho",
+    "ai",
+    "groq"
   ],
-  "author": "La Huerta del Husky",
+  "author": "Despacho Jurídico",
   "license": "MIT",
   "dependencies": {
     "@tensorflow/tfjs-node": "^4.22.0",
@@ -35,7 +36,7 @@
     "qrcode-terminal": "^0.12.0",
     "sharp": "^0.32.6",
     "uuid": "^9.0.0",
-    "whatsapp-web.js": "^1.23.0"
+    "whatsapp-web.js": "^1.34.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
