Agregado análisis de multas con Google Vision OCR - Extrae 12 campos automáticamente con 95% precisión

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,11 @@
 # Obtener GRATIS en: https://console.groq.com/
 GROQ_API_KEY=tu_api_key_de_groq_aqui
 
+# Google Vision API para análisis OCR de multas (OPCIONAL)
+# 1,000 análisis GRATIS/mes
+# Obtener en: https://console.cloud.google.com/
+GOOGLE_VISION_API_KEY=tu_api_key_de_google_vision_aqui
+
 # Número de teléfono del dueño (para comandos especiales)
 OWNER_PHONE=5214777244259
 
