Mejoras en GoogleVisionMultaAnalyzer y flujo de opciones del menu: mapeo correcto de campos, respuestas especificas por servicio, prioridad de procesamiento de imagenes

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,9 @@ yarn-error.log*
 .env.test.local
 .env.production.local
 
+# Configuración local (modo pruebas)
+.config.local
+
 # Archivos de log
 *_log
 *.log
