--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@tensorflow/tfjs-node": "^4.22.0",
     "axios": "^1.12.2",
     "cors": "^2.8.5",
+    "docx": "^9.5.1",
     "dotenv": "^16.6.1",
     "express": "^4.18.2",
     "form-data": "^4.0.4",
